remove tmux powerline; use fish shell for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,22 +41,22 @@ unbind Btab
 # bind Tab      choose-window
 
 # Set status bar
-#set -g status-bg colour235
-#set -g status-fg colour33
-#set -g status-left-length 50
-#set -g status-left '#[fg=green]#S@#h:#[fg=default]'
+set -g status-bg colour235
+set -g status-fg colour33
+set -g status-left-length 50
+set -g status-left '#[fg=green]#S@#h:#[fg=default]'
 
 # Highlight active window
-#set-window-option -g window-status-current-fg colour9
-#set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg colour9
+set-window-option -g window-status-current-bg default
 
 # activity alert
-#set-option -gw window-status-activity-attr bold
-#set-option -gw window-status-activity-bg default
-# set-option -gw window-status-activity-fg colour333
+set-option -gw window-status-activity-attr bold
+set-option -gw window-status-activity-bg default
+set-option -gw window-status-activity-fg colour333
 
 # right side of status bar
-#set -g status-right '#[fg=white][ #[fg=colour33]%Y-%m-%d #[fg=colour9]%H:%M#[fg=white] ]'
+set -g status-right '#[fg=white][ #[fg=colour33]%Y-%m-%d #[fg=colour9]%H:%M#[fg=white] ]'
 
 # Set window notifications
 set -g monitor-activity on
@@ -85,8 +85,8 @@ bind-key > resize-pane -R 10
 bind-key ^ resize-pane -U 10
 bind-key \ resize-pane -D 10
 
-run-shell "powerline-daemon -q"
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+#run-shell "powerline-daemon -q"
+#source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # move between panes
 bind-key k select-pane -U
@@ -97,3 +97,5 @@ bind-key l select-pane -R
 # move windows
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+set-option -g default-shell "/usr/local/bin/fish"
