--- a/stumpwm/.stumpwmrc
+++ b/stumpwm/.stumpwmrc
@@ -12,10 +12,35 @@
 ;; TODO Install `rxvt-unicode'
 ;; FIXME If urxvt is not installed, let default keybinding
 (defcommand urxvt () ()
-  "Start an urxvt instance or switch to it, if it is already running."
-  (run-or-raise "urxvt" '(:instance "urxvt")))
+  "Start an urxvt instance."
+  (run-shell-command "urxvt"))
 (define-key *root-map* (kbd "c") "urxvt")
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; spotify
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+(defcommand play-pause () ()
+  "Spotify play/pause"
+  (run-shell-command "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"))
+
+(defcommand spotify-next () ()
+  "Spotify next song"
+  (run-shell-command "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"))
+
+(defcommand spotify-previous () ()
+  "Spotify previous song"
+  (run-shell-command "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"))
+
+;; music keymap
+(defvar *tosh-music-bindings*
+  (let ((m (make-sparse-keymap)))
+    (define-key m (kbd "p") "play-pause")
+    (define-key m (kbd "n") "spotify-next")
+    (define-key m (kbd "l") "spotify-previous")
+    m ; NOTE: this is important
+  ))
+
+(define-key *root-map* (kbd "\C-m") '*tosh-music-bindings*)
 
 ;; launch Web browser
 (defcommand firefox () ()
@@ -26,6 +51,25 @@
   (run-or-raise "chromium-browser" '(:class "Chromium")))
 (define-key *root-map* (kbd "b") "chrome")
 
+(defcommand mutt () ()
+  "Start or switch to mutt"
+  (run-or-raise "urxvt -title mutt -e mutt" '(:title "mutt") :all-groups t))
+(define-key *root-map* (kbd "m") "mutt")
+
+(defcommand zulip () ()
+  "Start or switch to zulip"
+  (run-or-raise "chromium-browser -title zulip --app=http://zulip.uniregistry.com"
+                '(:instance "zulip.uniregistry.com")))
+(define-key *root-map* (kbd "z") "zulip")
+
+(defcommand slack () ()
+  "Start or switch to slack"
+  (run-or-raise "chromium-browser -title slack --app=http://not-uniregistry.slack.com"
+                '(:instance "not-uniregistry.slack.com"))
+  (run-or-raise "chromium-browser -title slack --app=http://12s.slack.com"
+                '(:instance "12s.slack.com")))
+(define-key *root-map* (kbd "\C-c") "slack")
+
 ;; Web browsing commands
 ;; Get the X selection and order the GUI browser to open it. Presumably it
 ;; is a HTTP address.
@@ -34,19 +78,29 @@
   (run-shell-command (cat "exec chromium-browser" (get-x-selection))))
 
 
-(defcommand tcomm () ()
-  "Start comm apps on comm group"
-  (gnew "comm")
-  (run-shell-command "exec firefox -url 'https://zulip.uniregistry.com'")
-  (vsplit)
-  (move-focus :down)
-  (run-shell-command "exec slack")
-  (hsplit))
-
-
-
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; swank stuff
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 (require :swank)
 (swank-loader:init)
 (swank:create-server :port 4004
                      :style swank:*communication-style*
                      :dont-close t)
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; window/frame stuff
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+(clear-window-placement-rules)
+
+(define-frame-preference "comm"
+  (0 nil t :instance "zulip.uniregistry.com")
+  (1 nil t :instance "not-uniregistry.slack.com")
+  (1 nil t :instance "12s.slack.com")
+  (3 nil t :title "mutt"))
+
+(defcommand tcomm () ()
+  "set up comm group"
+  (gnew "comm")
+  (restore-from-file "~/group-dump.lisp"))
