--- a/stumpwm/.stumpwmrc
+++ b/stumpwm/.stumpwmrc
@@ -70,6 +70,11 @@
                 '(:instance "12s.slack.com")))
 (define-key *root-map* (kbd "\C-c") "slack")
 
+(defcommand paste () ()
+  "paste, simple enough eh?"
+  (window-send-string (get-x-selection)))
+(define-key *root-map* (kbd "\C-p") "paste")
+
 ;; Web browsing commands
 ;; Get the X selection and order the GUI browser to open it. Presumably it
 ;; is a HTTP address.
