--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -24,7 +24,7 @@ set beep_new             # bell on new mails
 set pipe_decode          # strip headers and eval mimes when piping
 set thorough_search      # strip headers and eval mimes before searching
 auto_view text/html
-alternative_order text/plain text/html
+alternative_order text/plain text/enriched text/html
 set text_flowed=yes
 
 # threading
@@ -66,10 +66,10 @@ bind pager j next-line
 bind pager k previous-line
 bind attach,index,pager \CD next-page
 bind attach,index,pager \CU previous-page
-bind pager g top
-bind pager G bottom
-bind attach,index g first-entry
-bind attach,index G last-entry
+# bind pager g top
+# bind pager G bottom
+# bind attach,index g first-entry
+# bind attach,index G last-entry
 
 # Sidebar ------------------------------------------
 #change width accordingly
