update tmux files for linux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,10 +26,10 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # mouse support
-# set -g mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window onbetween panes
+set -g mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window onbetween panes
 
 # force a reload of the config file
 unbind r
@@ -53,7 +53,7 @@ set-window-option -g window-status-current-bg default
 # activity alert
 set-option -gw window-status-activity-attr bold
 set-option -gw window-status-activity-bg default
-set-option -gw window-status-activity-fg colour333
+# set-option -gw window-status-activity-fg colour333
 
 # right side of status bar
 set -g status-right '#[fg=white][ #[fg=colour33]%Y-%m-%d #[fg=colour9]%H:%M#[fg=white] ]'
@@ -98,4 +98,4 @@ bind-key l select-pane -R
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-set-option -g default-shell "/usr/local/bin/fish"
+set-option -g default-shell "/usr/bin/fish"
