--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,18 +18,26 @@ set-window-option -g pane-base-index 1
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# unixy copy
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 
 # mouse support
-set -g mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window onbetween panes
+# set -g mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window onbetween panes
+bind-key -t vi-copy 'v' begin-selection     # Begin selection in copy mode.
+bind-key -t vi-copy 'C-v' rectangle-toggle  # Begin selection in copy mode.
+bind-key -t vi-copy 'y' copy-selection      # Yank selection in copy mode.
 
 # force a reload of the config file
 unbind r
