qutebrowser auto insert mode

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -542,7 +542,7 @@ timeout = 500
 partial-timeout = 5000
 insert-mode-on-plugins = false
 auto-leave-insert-mode = true
-auto-insert-mode = false
+auto-insert-mode = true
 forward-unbound-keys = auto
 spatial-navigation = false
 links-included-in-focus-chain = true
@@ -1039,14 +1039,15 @@ hide-unmatched-rapid-hints = true
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 DEFAULT = https://duckduckgo.com/?q={}
+g = https://www.google.com/search?q={}
 
 [aliases]
 # Aliases for commands.
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
 # `qtb = open https://www.qutebrowser.org/`
-`g = open https://www.google.com/search?q={}`
-`gn = open -w https://www.google.com/search?q={}`
+g = open https://www.google.com/search?q=
+gn = open -w https://www.google.com/search?q=
 
 [colors]
 # Colors used in the UI.
