--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -35,7 +35,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+Shift+d kill
@@ -110,7 +110,8 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+#bindsym $mod+0 workspace 10
+bindsym $mod+0 workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -122,7 +123,7 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+#bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -169,8 +170,19 @@ mode "spotify" {
         bindsym Escape mode "default"
 }
 
+# spotify
+assign [class="Clementine"] 4
+mode "clementine" {
+        bindsym p exec qdbus org.mpris.clementine /Player Pause; mode "default"
+        bindsym n exec qdbus org.mpris.clementine /Player Next; mode "default"
+        bindsym l exec qdbus org.mpris.clementine /Player Prev; mode "default"
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
 # would be kind of neat to show currently playing song. not sure best way though
 # dbus-send --print-reply --session --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.freedesktop.DBus.Properties.Get string:'org.mpris.MediaPlayer2.Player' string:'Metadata'
+# bindsym $mod+m mode "spotify"
 bindsym $mod+m mode "spotify"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
