add day of week to i3 status
i can't remember what day it is

--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -117,7 +117,7 @@ battery 0 {
 }
 
 tztime local {
-  format = " %h-%d %H:%M ☰ "
+  format = " %a, %h-%d %H:%M ☰ "
   # termsyn font
   # format = " %h-%d É %H:%M  ¸ ÈÈÈ È "
 }
