update qutebrowser key bindings

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -46,14 +46,18 @@ leave-mode
 [normal]
 # Keybindings for normal mode.
 
-clear-keychain ;; search
+clear-keychain ;; search ;; fullscreen --leave
     <escape>
+    <ctrl-[>
 
 set-cmd-text -s :open
     o
 
 set-cmd-text :open {url:pretty}
     go
+
+set-cmd-text -s :open -t
+    O
 
 set-cmd-text :open -t -i {url:pretty}
     gO
@@ -65,7 +69,7 @@ set-cmd-text :open -b -i {url:pretty}
     xO
 
 set-cmd-text -s :open -w
-    O
+    wo
 
 set-cmd-text :open -w {url:pretty}
     wO
@@ -155,6 +159,9 @@ hint
 
 hint all tab
     F
+
+hint all window
+    wf
 
 hint all tab-bg
     ;b
@@ -366,12 +373,18 @@ set-cmd-text -s :buffer
 
 tab-focus last
     <ctrl-tab>
+    <ctrl-6>
+    <ctrl-^>
 
 enter-mode passthrough
     <ctrl-v>
 
 quit
     <ctrl-q>
+    ZQ
+
+wq
+    ZZ
 
 scroll-page 0 1
     <ctrl-f>
@@ -387,6 +400,8 @@ scroll-page 0 -0.5
 
 tab-focus 1
     <alt-1>
+    g0
+    g^
 
 tab-focus 2
     <alt-2>
@@ -409,8 +424,9 @@ tab-focus 7
 tab-focus 8
     <alt-8>
 
-tab-focus 9
+tab-focus -1
     <alt-9>
+    g$
 
 home
     <ctrl-h>
@@ -421,7 +437,7 @@ stop
 print
     <ctrl-alt-p>
 
-open qute:settings
+open qute://settings
     Ss
 
 follow-selected
@@ -439,14 +455,14 @@ follow-selected -t
 repeat-command
     .
 
+tab-pin
+    <ctrl-p>
+
 record-macro
     q
 
 run-macro
     @
-
-hint all window
-    wf
 
 [insert]
 # Keybindings for insert mode.
@@ -485,6 +501,11 @@ hint links
 
 hint all tab-bg
     <ctrl-b>
+
+[passthrough]
+# Keybindings for passthrough mode.
+# Since normal keypresses are passed through, only special keys are
+# supported in this mode.
 
 [command]
 # Keybindings for command mode.
