qutebrowser - close window if on last tab

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -607,7 +607,7 @@ new-tab-position-explicit = last
 #         default-page: Load the default page.
 #         close: Close the window.
 #     Default: ignore
-last-close = ignore
+last-close = close
 
 # show (String):
 #     When to show the tab bar
