--- a/mbsync/.mbsyncrc
+++ b/mbsync/.mbsyncrc
@@ -3,7 +3,7 @@ IMAPAccount uniregistry
 Host imap.uniregistry.com
 User tosh@uniregistry.com
 # To store the password in an encrypted file use PassCmd instead of Pass
-PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.mailpass.gpg"
+PassCmd "gpg2 -q --batch --for-your-eyes-only --no-tty -d ~/.mailpass.gpg"
 #
 #AuthMechs LOGIN
 #SSLType IMAPS
