--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -2,7 +2,7 @@
 source "gpg2 -dq $HOME/.authinfo.gpg |"
 
 # Paths ----------------------------------------------
-set folder           = ~/Mail                # mailbox location
+set folder           = ~/mail                # mailbox location
 set alias_file       = ~/.mutt/alias         # where to store aliases
 set header_cache     = ~/.mutt/cache/headers # where to store headers
 set message_cachedir = ~/.mutt/cache/bodies  # where to store bodies
