setup to get notifications for new mail using notmuch and afew
add custom afew filter to show notifications
remove notifications from mbsync script

--- a/afew/.config/afew/config
+++ b/afew/.config/afew/config
@@ -13,8 +13,10 @@ message = "Sentry"
 query = from:"sentry@sentry02.ams1.uniregistrar.net"
 tags = +sentry;+unread;-new
 
+[NotifyFilter]
+
 [Filter.2]
-message = "No inbox needed"
+message = "Mark unread, remove new"
 tags = +unread;-new
 
 #
