--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -233,7 +233,8 @@ bindsym $mod+m mode "spotify"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status
+  #status_command i3status
+  status_command /home/tosh/.local/bin/py3status --include=/home/tosh/.config/py3status
   position top
   colors {
     background #263238
