--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -19,7 +19,8 @@ general {
 
 # order += "volume master"
 order += "cpu_usage"
-order += "load"
+order += "battery 0"
+# order += "load"
 # order += "cpu_temperature 0"
 # order += "cpu_temperature 1"
 # order += "cpu_temperature 2"
@@ -27,7 +28,7 @@ order += "load"
 order += "disk /"
 # order += "disk /media/media"
 # order += "ethernet eth0"
-order += "battery 0"
+order += "notmuch"
 order += "tztime local"
 #order += "ipv6"
 #order += "run_watch DHCP"
@@ -78,7 +79,7 @@ cpu_temperature 3 {
 }
 
 disk "/" {
-  format = " %avail:/ "
+  format = "🖬  %avail"
 }
 
 disk "/media/media" {
@@ -111,7 +112,8 @@ run_watch VPN {
 battery 0 {
   low_threshold = 30
   threshold_type = percentage
-  format = "%percentage"
+  #format = "%percentage"
+  format = "🔋 %percentage"
   last_full_capacity = false
   integer_battery_capacity = true
 }
@@ -120,4 +122,7 @@ tztime local {
   format = " %a, %h-%d %H:%M ☰ "
   # termsyn font
   # format = " %h-%d É %H:%M  ¸ ÈÈÈ È "
+}
+
+notmuch {
 }
