--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -30,9 +30,8 @@ gaps inner 10
 # exec xrdb -merge ~/.Xresources
 # exec /home/tosh/.screenlayout/work3.sh
 exec_always /usr/lib/system76-driver/system76-hidpi-daemon
-exec_always /usr/bin/blueman-applet
+exec /usr/bin/blueman-applet
 for_window [instance="^scratch"] move scratchpad
-exec termite --name=scratch
 bindsym $mod+t [instance="scratch"] scratchpad show
 
 set $mod Mod1
