--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@
 # i3 gaps specific stuff
 
 # disable title bars for i3 gaps
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 1
 
 gaps inner 10
 #gaps outer 10
@@ -31,6 +31,8 @@ gaps inner 10
 # exec /home/tosh/.screenlayout/work3.sh
 exec_always /usr/lib/system76-driver/system76-hidpi-daemon
 exec /usr/bin/blueman-applet
+
+exec /usr/bin/nm-applet
 for_window [instance="^scratch"] move scratchpad
 bindsym $mod+t [instance="scratch"] scratchpad show
 
@@ -43,7 +45,7 @@ workspace 1 output DP-1-8
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8
 
 # use dunst for notifications
 exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
@@ -53,7 +55,7 @@ exec xsetroot -solid "#333F45"
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -67,7 +69,8 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec termite
+#bindsym $mod+Return exec termite
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+d kill
@@ -80,23 +83,30 @@ bindsym $mod+Shift+d kill
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # try out rofi instead of dmenu
-bindsym $mod+space exec rofi -show run
+# bindsym $mod+space exec rofi -show run
+# bindsym $mod+shift+space exec rofi -show window 
+bindsym $mod+space exec "rofi -show window -combi-modi window,run"
 
 # change focus
-bindsym $mod+j exec i3-msg border pixel 2; focus left
-bindsym $mod+k exec i3-msg border pixel 2; focus down
-bindsym $mod+l exec i3-msg border pixel 2; focus up
-bindsym $mod+semicolon exec i3-msg border pixel 2; focus right
-bindsym --release $mod+j exec i3-msg border pixel 0
-bindsym --release $mod+k exec i3-msg border pixel 0
-bindsym --release $mod+l exec i3-msg border pixel 0
-bindsym --release $mod+semicolon exec i3-msg border pixel 0
+bindsym $mod+j exec i3-msg border pixel 0; focus left
+bindsym $mod+k exec i3-msg border pixel 0; focus down
+bindsym $mod+l exec i3-msg border pixel 0; focus up
+bindsym $mod+semicolon exec i3-msg border pixel 0; focus right
+bindsym --release $mod+j exec i3-msg border pixel 1
+bindsym --release $mod+k exec i3-msg border pixel 1
+bindsym --release $mod+l exec i3-msg border pixel 1
+bindsym --release $mod+semicolon exec i3-msg border pixel 1
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
+
+# move workspaces
+bindsym $mod+Left move workspace to output left
+bindsym $mod+Down move workspace to output down
+bindsym $mod+Up move workspace to output up
+bindsym $mod+Right move workspace to output right
 
 # move focused window
 bindsym $mod+Shift+j move left
@@ -125,7 +135,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+w floating toggle
 
 # sticky window to all workspaces
 bindsym $mod+Shift+s sticky toggle
@@ -273,8 +283,10 @@ bar {
 }
 
 # class                 border  backgr. text    indicator child_border
-client.unfocused        #3a4c55 #4a626d #ffffff #2e9ef4   #285577
+# client.unfocused        #3a4c55 #4a626d #ffffff #2e9ef4   #285577
+client.unfocused        #3a4c55 #4a626d #ffffff #2e9ef4   #333F45
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.focused          #263238 #263238 #ffffff #292d2e   #222222
+# client.focused          #263238 #263238 #ffffff #292d2e   #222222
+client.focused          #263238 #263238 #ffffff #292d2e   #5b7786
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
