tmux: update colors to match everything else

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,10 +49,10 @@ unbind Btab
 # bind Tab      choose-window
 
 # Set status bar
-set -g status-bg colour235
-set -g status-fg colour33
+set -g status-bg default
+set -g status-fg colour4
 set -g status-left-length 50
-set -g status-left '#[fg=green]#S@#h:#[fg=default]'
+set -g status-left '#[fg=colour2]#S@#h:#[fg=default]'
 
 # Highlight active window
 set-window-option -g window-status-current-fg colour9
@@ -64,7 +64,7 @@ set-option -gw window-status-activity-bg default
 # set-option -gw window-status-activity-fg colour333
 
 # right side of status bar
-set -g status-right '#[fg=white][ #[fg=colour33]%Y-%m-%d #[fg=colour9]%H:%M#[fg=white] ]'
+set -g status-right '#[fg=white][ #[fg=colour4]%Y-%m-%d #[fg=colour9]%H:%M#[fg=white] ]'
 
 # Set window notifications
 set -g monitor-activity on
